--- a/activities/tables/tables.css
+++ b/activities/tables/tables.css
@@ -1,3 +1,27 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+table tr {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+table tr {
+    background-color: beige;
+    color: blue;
+}
+
+table {
+    border-collapse: collapse; 
+    border: 3px solid #008080; 
+}
+
+td, th {
+    border: 2px solid #ff6600; 
+    padding: 8px;
+}
+
+caption {
+    color: #003366;
+}
